compiler/toc-hir-lowering/tests/snapshots/lowering__lower_char_seq_escapes-39.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : int _ := \"\\U1F029z\""
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..27): "<root>"@(dummy)
      StmtBody@(src/main.t:0..27): []
        StmtItem@(src/main.t:0..11): ItemId(0)
          ConstVar@(src/main.t:0..11): var "_"@(src/main.t:4..5)
            Primitive@(src/main.t:8..11): Int
        Assign@(src/main.t:12..27)
          Name@(src/main.t:12..13): "_"@(src/main.t:4..5)
          Literal@(src/main.t:17..27): String("🀩z")
