compiler/toc-hir-lowering/tests/snapshots/lowering__lower_char_seq_escapes-45.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : int _ := \""
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..18): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..18): []
        StmtItem@(FileId(1), 0..11): ItemId(0)
          ConstVar@(FileId(1), 0..11): var "_"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..11): Int
        Assign@(FileId(1), 12..18)
          Name@(FileId(1), 12..13): "_"@(FileId(1), 4..5)
          Literal@(FileId(1), 17..18): String("")
error at (FileId(1), 17..18): invalid string literal
| error for (FileId(1), 17..18): missing terminator character

