compiler/toc-hir-lowering/tests/snapshots/lowering__lower_char_seq_escapes-49.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : int _ := \"\\777\""
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..23): "<root>"@(dummy)
      StmtBody@(src/main.t:0..23): []
        StmtItem@(src/main.t:0..11): ItemId(0)
          ConstVar@(src/main.t:0..11): var "_"@(src/main.t:4..5)
            Primitive@(src/main.t:8..11): Int
        Assign@(src/main.t:12..23)
          Name@(src/main.t:12..13): "_"@(src/main.t:4..5)
          Literal@(src/main.t:17..23): String("�")
error at src/main.t:17..23: invalid string literal
| error for src/main.t:18..22: octal character value is greater than \377 (decimal 255)
