compiler/toc-hir-lowering/tests/snapshots/lowering__lower_char_seq_escapes-51.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : int _ := \"\\u3ffffff\""
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..28): "<root>"@(dummy)
      StmtBody@(src/main.t:0..28): []
        StmtItem@(src/main.t:0..11): ItemId(0)
          ConstVar@(src/main.t:0..11): var "_"@(src/main.t:4..5)
            Primitive@(src/main.t:8..11): Int
        Assign@(src/main.t:12..28)
          Name@(src/main.t:12..13): "_"@(src/main.t:4..5)
          Literal@(src/main.t:17..28): String("�")
error at src/main.t:17..28: invalid string literal
| error for src/main.t:18..27: unicode codepoint value is greater than U+10FFFF
