compiler/toc-hir-lowering/tests/snapshots/lowering__lower_char_seq_escapes-52.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "var _ : int _ := \"\\u3fffffff\""

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..29): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..29): []
        StmtItem@(FileId(1), 0..11): ItemId(0)
          ConstVar@(FileId(1), 0..11): var "_"@(FileId(1), 4..5)
            Primitive@(FileId(1), 8..11): Int
        Assign@(FileId(1), 12..29)
          Name@(FileId(1), 12..13): "_"@(FileId(1), 4..5)
          Literal@(FileId(1), 17..29): String("�")
error in file FileId(1) at 17..29: invalid string literal
| error in file FileId(1) for 18..28: unicode codepoint value is greater than U+10FFFF

